--- a/core/src/index.css
+++ b/core/src/index.css
@@ -9,6 +9,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   scroll-behavior: smooth;
+  background: #000;
 
 }
 
